feat: utilities, services, connections
All smooth now
